examples/test/testpolicy10489.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10489
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key42: value24
      key40: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value41
          key31: value4
          key48: value40
      podSelector:
        matchLabels:
          key19: value34
          key48: value20
          key7: value30
